--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=12345
 DB_CONNECTION=mysql
-DB_DATABASE=shop
+DB_DATABASE=test-project
 DB_SYNCHRONIZE=false
 
 SQL_SERVER = mysql://
